--- a/assets/style.css
+++ b/assets/style.css
@@ -144,6 +144,7 @@ body {
 	padding-block: 3em;
 }
 .quote__text {
+	font-size: calc(1.375rem + 1.5vw);
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
